# AuthorizationFastApi

./: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  example.env  pyproject.toml  requirements.txt
src/app/: main.py
src/app/api/v1/: authorization.py
src/app/dto/: authorization.py
src/core/: backoff.py  config.py  logger.py
src/domain/entities/: login_history.py  user.py
src/infrastructure/ioc_container/: __init__.py  session_provider.py  uow_provider.py
src/infrastructure/postgres/: exceptions.py  tables.py  uow.py
src/infrastructure/postgres/migrations/: env.py
src/infrastructure/postgres/migrations/versions/: d42af3b3dd63_auto.py
src/infrastructure/postgres/repositories/: base.py  user_repo.py
src/services/: jwt_keys_example.py  jwt_utils.py
